✨ feat(api): Add API to list of user vault
